Added ibdev() binding

--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "node-linux-gpib",
+  "name": "linux-gpib",
   "version": "0.0.0",
   "description": "Linux GPIB bindings",
   "main": "index.js",
   "author": "Jue <me@jue.yt>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jue89/node-linux-gpib.git"
+  },
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {
+    "nan": "^2.4.0"
+  }
 }
